# porto

./: .gitignore  Cargo.toml  docker-compose.yml  dockerfile  install.sh  justfile  makefile  porto.toml  readme.md  uninstall.sh
.config/: cargo.toml
.github/workflows/: release.yml  rust.yml
benchmarks/caddy/: Caddyfile
benchmarks/nginx/: benchmark.conf
benchmarks/proxy_caddy/: Caddyfile
benchmarks/proxy_go/: main.go
benchmarks/proxy_python/: main.py  non_async.py
credentials/: _wildcard.local.porto-key.pem  _wildcard.local.porto.pem  testpeer.com+3-key.pem  testpeer.com+3.pem
proxy_caddy/: Caddyfile
proxy_go/: go.mod  main.go
proxy_python/: pyproject.toml
scripts/: help_porto.toml  install.sh  porto.service  test.sh  uninstall.sh
src/: acme.rs  cli.rs  config.rs  ctrl.rs  errors.rs  lib.rs  pool.rs  server.rs  setup.rs  tls.rs  utils.rs
src/acme/: account.rs  cert_store.rs  challenge.rs  helper.rs  mod.rs  order.rs  resolver.rs
src/services/: addr.rs  cache.rs  comp.rs  connection_table.rs  connector.rs  custom_pool.rs  health.rs  http_con.rs  mod.rs  proxy.rs  ratelimit.rs  req_validation.rs  setup.rs  upstream.rs  upstream2.rs  upstream3.rs  upstream_backend.rs
src/services/upstream/: connection_table.rs  connector.rs  http.rs  hyper_client.rs  mod.rs  upstream2.rs
src/utils/: http.rs  mod.rs  peer.rs  ringbuffer.rs  svc_helper.rs  tls.rs  types.rs
tests/: service-test.rs
tests/common/: backend.rs  client.rs  mod.rs
tests/setup/: backend.rs  client.rs  mod.rs  proxy.rs
