[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.6.8", features = ["fs", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

http-body-util = "0.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
hyper-rustls = "0.27.7"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
reqwest = "0.13.2"
futures = "0.3.32"
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
dashmap = "6.1.0"
hyperlocal = "0.9.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "server2"
path = "src/bin/server2.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[profile.release]
debug = true              # Include debug symbols
