[package]
name = "porto"
version = "0.1.0"
edition = "2024"
default-run = "porto"
description = "a fast hassle free reverse proxy"

[[bin]]
name = "porto"
path = "src/bin/porto.rs"

[[bin]]
name = "peer"
path = "src/bin/test_peer.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.7.0", features = [
  "catch-panic",
  "compression-gzip",
  "fs",
  "limit",
  "map-response-body",
  "normalize-path",
  "timeout",
  "trace",
] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

addr = "0.15.6"
anyhow = "1.0.102"
axum = "0.8.9"
axum-server = "0.8.0"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
foyer = "0.22.3"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
http-body-util = "0.1"
http-cache-semantics = "3.0.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1", features = ["client", "full", "tokio"] }
hyperlocal = "0.9.1"
instant-acme = { version = "0.8.5", features = ["hyper-rustls"] }
parking_lot = "0.12.5"
pin-project-lite = "0.2.17"
rand = "0.10.1"
rcgen = { version = "0.14.7", features = ["aws_lc_rs"] }
reqwest = "0.13.2"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
tap = "1.0.1"
thiserror = "2.0.18"
tikv-jemallocator = "0.6.1"
time = "0.3.47"
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["time"] }
toml = { version = "1.1.2", features = ["serde"] }
url = "2.5.8"
x509-parser = { version = "0.18.1", features = ["aws-lc-rs"] }

[dev-dependencies]
test-log = {version = "0.2", features = ["trace"]}
[profile.release]
# debug = true  # Include debug symbols
